src/test/deca/extension/context/invalid/soustraction_of_array.deca
// Description:
// 	  Array's soustraction with array with the same dimensions
// Resultats:
// 	  INCOMPATIBLE_TYPE_OPERATOR: Type int\[\] is incompatible with type int\[\] for the operator -
//    line 13
// Historique:
// 	  cree le /01/2023

{
    int[3] A = {3, 2, 1};
    int[3] B = {1, 2, 3};
    int[3] C = {1, 1, 1};
    int[3] C1 = A - B;
    int[1][3] C2 = {A - B - C};
    int[1][3] C3 = {A} - {B};
}
